--- a/Front-end/LESS/home.less
+++ b/Front-end/LESS/home.less
@@ -1,33 +1,62 @@
-
-    body {
+        body {
         background: lightgrey;
     }
     
     .container {
         margin: 0 auto;
 		max-width: 500px;
-        
-       
     }
 
-    nav {
-        background:rgb(44, 43, 43);
-        // display: flex;
-        // flex-direction: row;
+    .sidenav {
+        height: 100%; /* 100% Full-height */
+        width: 0; /* 0 width - change this with JavaScript */
+        position: fixed; /* Stay in place */
+        z-index: 1; /* Stay on top */
+        top: 0;
+        left: 0;
+        background-color: black;
+        overflow-x: hidden; /* Disable horizontal scroll */
+        padding-top: 60px; /* Place content 60px from the top */
+        transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
+      }
+
+      .sidenav a {
+        padding: 8px 8px 8px 32px;
+        text-decoration: none;
+        font-size: 25px;
+        color: rgba(224, 39, 39, 0.767);
+        transition: 0.3s;
+        // display: block;
+      }
+
+      .sidenav a:hover {
+        color: #f1f1f1;
+      }
+
+      .sidenav .closebtn {
+        position: absolute;
+        top: 0;
+        right: 25px;
+        font-size: 36px;
+        margin-left: 50px;
+      }
+    
+
+    nav span {
+        background:rgba(224, 39, 39, 0.767);
+        color: white;
     }
 
     header .signup {
         background: rgba(224, 39, 39, 0.767);
         color: white;
-        
     }
-
+    
     header {
-        
         margin: auto;
         width: 95%;
-        border: 1px solid black;
         padding: 10px;
+        display: inline-flex;
     }
 
     h1 {
@@ -41,14 +70,14 @@
     }
     
     .top-img {
-        width: 100%;
+        width: 500px;
         height: 200px;
-        border: 1px solid red;
+        border: 1px solid black;
     }
     
     .first-card img {
-        width: 450px;
-        height: 250px;
+        width: 500px;
+        height: 200px;
     }
     
     .second-card img {
@@ -156,11 +185,6 @@
     header .signup {
         background: rgba(224, 39, 39, 0.767);
         color: white;
-        margin-left: 400px;
-    }
-    
-    .top-content {
-        
     }
     
     .top-content img {
@@ -267,5 +291,4 @@ header {
 
 footer {
     margin-left: 500px;
-}
-}
+}};
